--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,10 @@
   --border-radius: 12px;
   --bg-secondary: #A076F2;
   --bg-primary: #FFFFFF;
+  --drop-shadow: #0000001A;
   --secundary-text: #A076F2;
   --primary-text: #555555;
+  --border-color: rgba(224, 224, 224, 1);
 }
 
 * {
@@ -19,5 +21,6 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   font-family: 'Roboto', sans-serif;
+  background-color: rgba(247, 247, 247, 1);
 }
 
