feat: adicionando classe no hr

--- a/src/pages/home/home.module.css
+++ b/src/pages/home/home.module.css
@@ -11,7 +11,7 @@
   margin: auto;
 }
 
-.homeSelectTab hr {
+.tabSeparator {
   border: none;
   height: 1px;
   background-color: rgba(231, 231, 231, 1);
