--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   --drop-shadow: #0000001A;
   --secundary-text: #A076F2;
   --primary-text: #555555;
+  --subtitle: rgba(117, 117, 117, 1);
   --border-color: rgba(224, 224, 224, 1);
 }
 
