--- a/src/components/author/author.module.css
+++ b/src/components/author/author.module.css
@@ -1,7 +1,7 @@
 .cardAuthor {
   padding: 1px;
   border-radius: 8px;
-  width: 296px;
+  min-width: 296px;
   height: 70px;
   border: 1px solid var(--border-color);
   display: flex;
