--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   --secundary-text: #A076F2;
   --primary-text: #555555;
   --subtitle: rgba(117, 117, 117, 1);
+  --text-navigate: rgba(158, 158, 158, 1);
   --border-color: rgba(224, 224, 224, 1);
 }
 
