--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -3,6 +3,7 @@
   width: 85vw;
   border-radius: 0 0 32px;
   box-shadow: 0 0 8px 0 var(--drop-shadow);
+  color: var(--primary-text);
   display: flex;
   align-items: center;
   justify-content: flex-end;
